[ano]#4502 fix alignment in header horizontal nav items

--- a/assets/themes/leo/css/modules.less
+++ b/assets/themes/leo/css/modules.less
@@ -756,7 +756,8 @@ nav.horizontal{
   }
 
   #my-photo{
-	margin-top: -4px;
+	margin-top: 11px;
+	vertical-align: 0;
   }
 }
 
